--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -27,6 +27,7 @@ artifacts {
 
 dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
+    // testing
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
